syntax = "proto3";

package envoy.type;

import "validate/validate.proto";
import "gogoproto/gogo.proto";

import "envoy/type/percent.proto";

option (gogoproto.equal_all) = true;

// [#protodoc-title: RuntimePercent]

// Runtime derived FractionalPercent with defaults for when the numerator or denominator is not
// specified via a runtime key.
message RuntimeFractionalPercent {
  // Default value if the runtime value's for the numerator/denominator keys are not available.
  envoy.type.FractionalPercent default_value = 1 [(validate.rules).message.required = true];

  // Runtime key for a YAML representation of a FractionalPercent.
  string runtime_key = 2;
}
